project-config-repo/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-backend-app
    spec:
      containers:
        - name: todo-backend-app
          image: backend-image
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 3 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            timeoutSeconds: 2
            failureThreshold: 2
            httpGet:
               path: /ready
               port: 9090
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healthz
               port: 9090
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
